Adding Firebase Store and Auth to register page

--- a/TrainTicketApp/TrainTicketApp/Views/RegisterViewController.xib
+++ b/TrainTicketApp/TrainTicketApp/Views/RegisterViewController.xib
@@ -30,7 +30,7 @@
                         <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Email" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="6sh-8A-zsg">
                             <rect key="frame" x="0.0" y="0.0" width="373" height="45"/>
                             <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                            <textInputTraits key="textInputTraits" textContentType="email"/>
+                            <textInputTraits key="textInputTraits" textContentType="username"/>
                         </textField>
                         <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="First Name" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="2wr-Lo-wdt">
                             <rect key="frame" x="0.0" y="73" width="373" height="44.5"/>
